# MECBench

./: .gitignore  .gitmodules  NOTICE.md  README.md
SUT/: Dockerfile.cpp  Dockerfile.py  Dockerfile.py.gpu  requirements.gpu.txt  requirements.txt
common/: setup_tc.sh
common/grpc_proto/: basic.proto
common/grpc_proto/cpp/: CMakeLists.txt  common.cmake
loadgen/: Dockerfile.cpp  Dockerfile.cppserver  Dockerfile.py  requirements.txt  requirements_cpp.txt
services/controller/: README.md  backend.py  backend_config.json  backend_list.json  config.py  kubernetes_manager.py  requirements.txt
services/controller/docs/: REFERENCE.md
services/frontend/: .prettierrc  README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxy.config.js
services/frontend/src/: api-paths.ts  index.html  styles.scss
services/frontend/src/app/: app.component.ts  app.module.ts
services/frontend/src/app/core/: settings.ts
services/frontend/src/app/core/authentication/: user.ts
services/frontend/src/app/core/configuration/: configuration.service.ts  interface.ts  loadgen.ts  netem.ts  (+2 more)
services/frontend/src/app/routes/: routes-routing.module.ts  routes.module.ts
services/frontend/src/app/shared/: constants.ts  shared.module.ts
services/frontend/src/assets/data/: menu.json
services/frontend/src/assets/i18n/: en-US.json
services/frontend/src/environments/: environment.ts
services/frontend/src/styles/: _themes.scss
services/storage/: Dockerfile.py_storage  README.md  default_profiles.json  requirements.txt  storage.py
services/storage/docs/: REFERENCE.md
(+76 files in other folders)
